--- a/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
+++ b/data/templates/http%3A%2F%2Fwww.researchspace.org%2Fresource%2Fmain_tree.html
@@ -65,6 +65,19 @@
           outline: 2px solid #9b59b6 !important;
           outline-offset: -2px !important;
         }
+        
+        /* Make tree arrows bigger and easier to click */
+        .tree-view_arrow {
+          font-size: 16px !important;
+          padding: 2px !important;
+          cursor: pointer !important;
+          display: inline-block !important;
+        }
+        
+        .tree-view_arrow:before {
+          font-size: 16px !important;
+          font-weight: bold !important;
+        }
       </style>
       <semantic-tree-advanced 
         id="evangelisti-tree-advanced"
