--- a/config/page-layout/header.hbs
+++ b/config/page-layout/header.hbs
@@ -29,7 +29,7 @@
       <ul class="nav navbar-nav navbar-left" style="height: 70px; display: flex; align-items: center;">
         <li><a href="/resource/homepageRS">Home</a></li>
         <li><a href="/resource/homepageRS#project">The Project</a></li>
-        <li><a href="#methodology">Methodology</a></li>
+        <li><a href="/resource/methodology">Methodology</a></li>
         <li><a href="/resource/main_tree">Data</a></li>
         <li><a href="http://localhost:10214/resource/sparql">SPARQL Endpoint</a></li>
       </ul>
