--- a/config/page-layout/header.hbs
+++ b/config/page-layout/header.hbs
@@ -31,7 +31,7 @@
         <li><a href="/resource/homepageRS#project">The Project</a></li>
         <li><a href="/resource/methodology">Methodology</a></li>
         <li><a href="/resource/main_tree">Data</a></li>
-        <li><a href="http://localhost:10214/resource/sparql">SPARQL Endpoint</a></li>
+        <li><a href="/sparql">SPARQL Endpoint</a></li>
       </ul>
 
       {{> navbarRight }}
