--- a/data/templates/stile.html
+++ b/data/templates/stile.html
@@ -40,6 +40,9 @@ body {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  min-height: 100vh; /* usa min-height invece di height */
+  height: auto; /* permetti al contenuto di estendersi */
+
 }
 
 .page-header {
